feat: 이름을 통한 자동화